--- a/Lesson00/ex00.tex
+++ b/Lesson00/ex00.tex
@@ -2,7 +2,7 @@
 \usepackage{soul,color}
 \usetheme{metropolis}           % Use metropolis theme
 \title{Web Programming Lab}
-\subtitle{Lession 0 - Introduction to Linux \& Java}
+\subtitle{Lesson 0 - Introduction to Linux \& Java}
 %\date{\today}
 \usepackage{lmodern}
 \author{Giacomo Bergami}
@@ -176,7 +176,7 @@
 	\end{enumerate}
 
 
-All the software used for these lessions is provided at \url{https://github.com/jackbergus/LPI07/tree/master/Lesson00}
+All the software used for these lessons is provided at \url{https://github.com/jackbergus/LPI07/tree/master/Lesson00}
 \end{frame}
 
 \end{document} 
