--- a/Lesson00/ex00.tex
+++ b/Lesson00/ex00.tex
@@ -8,7 +8,24 @@
 \author{Giacomo Bergami}
 \institute{University of Bologna}
 \begin{document}
-  \maketitle0
+  \maketitle
+  
+    \begin{frame}{Introduction}
+    Personal Information:
+    \begin{itemize}
+    	\item My web address: \url{http://jackbergus.github.io/teaching/LPI17/}
+    	\item My e-mail: \href{mailto:giacomo.bergami2@unibo.it}{giacomo.bergami2@unibo.it}
+    \end{itemize}
+    
+    Exercise 0:
+  	\begin{itemize}
+  		\item For these lab sessions, we're going to use the  \texttt{/public/lpi07/slot0$k$} folder.
+  		\item Create a folder called \texttt{surname.name}
+  		\item Copy the script \texttt{creation.sh} your freshly created directory.
+  		\item Run it.
+  	\end{itemize}
+  \end{frame}
+  
   \begin{frame}{Exercises 1-6}
     \begin{itemize}
     	\item Open the terminal. 
